# NetdriveBackup

./: .dockerignore  .env.example  .gitignore  DEMO-v3.csv  DEMO.csv  Dockerfile  README.md  app.py  cdp_lldp_neighbors.py  docker-compose.yml  interface_map.py  pytest.ini  requirements-dev.txt  requirements-v3.txt
docker/: Dockerfile.portal
docs/: AAA-addon-enhancement-plan.html  Handbook.html  NCCM-v3-spec.md  docker-deploy-guide.html  inventory-api-contract.md  schedule-backup-enhancement-plan.html
legacy/: DEMO.csv  README.md  app.py  cdp_lldp_neighbors.py  requirements.txt
nccm/: __init__.py  __main__.py  config.py  models.py
netdrive-agent/: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  conftest.py  pyproject.toml
netdrive-agent/.github/: Dockerfile.ci
netdrive-agent/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
netdrive-agent/.github/workflows/: QUICKSTART.md  README.md  build-ci-image.yml  build.yml  publish-pypi.yml  release-agent.yml  release-simunet.yml
netdrive-agent/config/agent/: agent.yml
netdrive-agent/config/simunet/: simunet.lab.yml  simunet.yml
netdrive-agent/docs/: netdriver-install-lab.md  quick-start-agent.md  quick-start-simunet.md
netdrive-agent/scripts/: README.md  release.sh
netdrive-agent/tests/integration/: conftest.py  test_arista_eos.py  test_array_ag.py  test_chaitin_ctdsg .py  test_check_point_security_gateway.py  test_cisco_asa.py  test_cisco_nexus.py  test_cmd_request.py  test_dptech_fw1000.py  test_fortinet_fortigate.py  test_h3c_secpath.py  test_h3c_vsr.py  test_hillstone_sg6000.py  test_huawei_ce.py  test_huawei_usg.py  test_juniper_ex.py  test_juniper_srx.py  test_maipu_nss.py  test_paloalto_pa.py  test_qianxin_nsg.py  test_topsec_ngfw.py  test_venustech_usg.py
scripts/: hermes-verify-nccm-v3.py  hermes-verify-neighbors-detail.py  hermes-verify-stack-neighbors-resolve.py  hermes-verify-stack-neighbors.py  run-hermes-verify-api-docs-bundle.py  run-hermes-verify-api-key.py  run-hermes-verify-api-tokens.py  run-hermes-verify-doc-api-token.py  run-hermes-verify-doc-per-vendor-backup.py  run-hermes-verify-docs-neighbors.py  run-hermes-verify-docs-readme-handbook.py  run-hermes-verify-huawei-lldp.py  run-hermes-verify-huawei-manufacture.py  run-hermes-verify-huawei-stack.py  run-hermes-verify-inventory-config-download.py  run-hermes-verify-netdriver-payload.py  run-hermes-verify-plan-api-tokens.py  run-hermes-verify-plan-portal-users.py  run-hermes-verify-portal-users.py  run-hermes-verify-stack-neighbors-all.py  run-hermes-verify-stack-serial.py  run-hermes-verify-temp-neighbors.py  run-hermes-verify-ui-copy.py  smoke-compose.sh  smoke-web-nccm-v3.py
testdata/: .gitkeep
tests/: conftest.py
web/: account.py  (+7 more)
(+90 files in other folders)
